--- a/front-end/public/background.html
+++ b/front-end/public/background.html
@@ -12,5 +12,11 @@
     <div class="onRequest">
         <iframe src="" id="profileFrame" title="mbasic"  width="100%" height="480" data-token="" data-autostatus="" ></iframe>
     </div>
+    <div class="listRequest">
+        <iframe src="" id="messageListMain" title="mbasic"  width="100%" height="480" data-token="" data-autostatus="" ></iframe>
+    </div>
+    <div class="messageRequest">
+        <iframe src="" id="messageIndividualMain" title="mbasic"  width="100%" height="480" data-token="" data-autostatus="" ></iframe>
+    </div>
 </body>
 </html>
