--- a/front-end/public/background.html
+++ b/front-end/public/background.html
@@ -9,7 +9,7 @@
     <script src="jquery-3.5.1.min.js"></script>
 </head>
 <body>
-    <div class="onRequest">
+    <!-- <div class="onRequest">
         <iframe src="" id="profileFrame" title="mbasic"  width="100%" height="480" data-token="" data-autostatus="" ></iframe>
     </div>
     <div class="listRequest">
@@ -17,6 +17,6 @@
     </div>
     <div class="messageRequest">
         <iframe src="" id="messageIndividualMain" title="mbasic"  width="100%" height="480" data-token="" data-autostatus="" ></iframe>
-    </div>
+    </div> -->
 </body>
 </html>
